--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.1",
     "etag": "^1.8.1",
     "express": "^4.18.2",
+    "google-auth-library": "^9.6.3",
     "jsonschema": "^1.4.1",
     "mongoose": "^8.1.1",
     "nodemon": "^3.0.3"
